crates/alder-parse/src/snapshots/alder_parse__statement__tests__return_newline_no_value.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    return\n    x\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 11,
                    },
                },
                value: Return(
                    None,
                ),
            },
        ],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: Var(
                    "x",
                ),
            },
        ),
    },
}
