crates/alder-parse/src/snapshots/alder_parse__statement__tests__return_parens.snap
---
source: crates/alder-parse/src/statement.rs
description: return (a)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Return(
        Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ),
    ),
}
