crates/alder-parse/src/snapshots/alder_parse__statement__tests__style_let.snap
---
source: crates/alder-parse/src/statement.rs
description: "let card = style { padding: 16px }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 35,
        },
    },
    value: Let(
        LetDecl {
            pattern: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "card",
                ),
            },
            annotation: None,
            value: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 35,
                    },
                },
                value: Style(
                    Style {
                        entries: [
                            StyleEntry {
                                key: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 27,
                                        },
                                    },
                                    value: Ident(
                                        "padding",
                                    ),
                                },
                                value: Dimension {
                                    number: NumberLit {
                                        value: 16.0,
                                        text: "16",
                                    },
                                    unit: "px",
                                },
                            },
                        ],
                    },
                ),
            },
        },
    ),
}
