crates/alder-parse/src/snapshots/alder_parse__statement__tests__two_calls_on_lines.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    foo()\n    bar()\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block {
        stmts: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 10,
                    },
                },
                value: Expr(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 8,
                                    },
                                },
                                value: Var(
                                    "foo",
                                ),
                            },
                            arguments: [],
                        },
                    },
                ),
            },
        ],
        tail: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 8,
                            },
                        },
                        value: Var(
                            "bar",
                        ),
                    },
                    arguments: [],
                },
            },
        ),
    },
}
