crates/alder-parse/src/snapshots/alder_parse__statement__tests__use_path.snap
---
source: crates/alder-parse/src/statement.rs
description: "use App::Db"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Use(
        Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: "App",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 12,
                        },
                    },
                    value: "Db",
                },
            ],
        },
    ),
}
