crates/alder-parse/src/snapshots/alder_parse__statement__tests__use_simple.snap
---
source: crates/alder-parse/src/statement.rs
description: use Db
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Use(
        Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "Db",
                },
            ],
        },
    ),
}
