crates/alder-parse/src/snapshots/alder_parse__statement__tests__while_simple.snap
---
source: crates/alder-parse/src/statement.rs
description: "while pending.length > 0 { process(pending.pop()) }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 52,
        },
    },
    value: While {
        condition: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 25,
                },
            },
            value: BinOps {
                operands: [
                    BinOpOperand {
                        expr: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 21,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 7,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 14,
                                        },
                                    },
                                    value: Var(
                                        "pending",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 15,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 21,
                                        },
                                    },
                                    value: "length",
                                },
                            },
                        },
                        op: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 22,
                                },
                                end: Position {
                                    line: 1,
                                    column: 23,
                                },
                            },
                            value: Gt,
                        },
                    },
                ],
                last: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 24,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    value: Number(
                        NumberLit {
                            value: 0.0,
                            text: "0",
                        },
                    ),
                },
            },
        },
        body: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 26,
                },
                end: Position {
                    line: 1,
                    column: 52,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 28,
                            },
                            end: Position {
                                line: 1,
                                column: 50,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 28,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 35,
                                    },
                                },
                                value: Var(
                                    "process",
                                ),
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 36,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 49,
                                        },
                                    },
                                    value: Call {
                                        function: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 36,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 47,
                                                },
                                            },
                                            value: Access {
                                                record: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 36,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 43,
                                                        },
                                                    },
                                                    value: Var(
                                                        "pending",
                                                    ),
                                                },
                                                field: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 1,
                                                            column: 44,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 47,
                                                        },
                                                    },
                                                    value: "pop",
                                                },
                                            },
                                        },
                                        arguments: [],
                                    },
                                },
                            ],
                        },
                    },
                ),
            },
        },
    },
}
